--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
         "plugin:@angular-eslint/template/process-inline-templates"
       ],
       "rules": {
+        "jsdoc/newline-after-description": "off",
         "@typescript-eslint/explicit-member-accessibility": [
           "off",
           {
